--- a/server_files/requirements.txt
+++ b/server_files/requirements.txt
@@ -12,7 +12,7 @@ reportlab==3.5.51
 requests==2.24.0
 six==1.15.0
 sqlparse==0.3.1
-stripe==2.50.0
+# stripe==2.50.0
 urllib3==1.25.10
 webencodings==0.5.1
 xhtml2pdf==0.2.4
